se arreglaron faltas de ortografía

--- a/FitLife/template/index.html
+++ b/FitLife/template/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Universidad de Gran Rosario (Virtual)</h1>
     <h2>Tecnicatura en Ciberseguridad</h2>
-    <h2>Matias Curti - Pablo Rodrigo Moya </h2>
+    <h2>Matias Leguizamon - Pablo Rodrigo Moya </h2>
     <h3>Trabajo Integrador</h3>    
     <!-- Formulario de Register -->
     <form action='/register' method="POST" autocomplete="off">
